--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,15 @@
 <html lang="en">
 <head>
 	{%- include head.html -%}
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162920352-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-162920352-1');
+    </script>
 </head>
 <body>
 	<header class="texture-{{ site.texture.style }}">
