--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {%- include head.html -%}
+    {%- include head.html -%}
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162920352-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-162920352-1');
+    </script>
 </head>
 <body>
   <header class="texture-{{ site.texture.style }}">
